#6 Delete unnecessary java option